errores.txt
yeremi@yeremi-VirtualBox:~/pr03cpp$ g++ -o cod cod.cpp
cod.cpp:8:5: error: ‘Node’ does not name a type
    8 |     Node* root;
      |     ^~~~
cod.cpp:10:5: error: ‘Node’ does not name a type
   10 |     Node* zig(Node* x);
      |     ^~~~
cod.cpp:11:5: error: ‘Node’ does not name a type
   11 |     Node* zag(Node* x);
      |     ^~~~
cod.cpp:12:5: error: ‘Node’ does not name a type
   12 |     Node* zigzag(Node* x);
      |     ^~~~
cod.cpp:13:5: error: ‘Node’ does not name a type
   13 |     Node* zagzig(Node* x);
      |     ^~~~
cod.cpp:14:5: error: ‘Node’ does not name a type
   14 |     Node* splay(Node* x);
      |     ^~~~
cod.cpp: In constructor ‘Splay::Splay()’:
cod.cpp:23:18: error: class ‘Splay’ does not have any field named ‘root’
   23 | Splay::Splay() : root(nullptr) {}
      |                  ^~~~
cod.cpp: In destructor ‘Splay::~Splay()’:
cod.cpp:27:12: error: ‘root’ was not declared in this scope
   27 |     delete root;
      |            ^~~~
cod.cpp: At global scope:
cod.cpp:31:1: error: ‘Node’ does not name a type
   31 | Node* Splay::zig(Node* x) {
      | ^~~~
cod.cpp:39:1: error: ‘Node’ does not name a type
   39 | Node* Splay::zag(Node* x) {
      | ^~~~
cod.cpp:47:1: error: ‘Node’ does not name a type
   47 | Node* Splay::zigzag(Node* x) {
      | ^~~~
cod.cpp:60:1: error: ‘Node’ does not name a type
   60 | Node* Splay::zagzig(Node* x) {
      | ^~~~
cod.cpp:73:1: error: ‘Node’ does not name a type
   73 | Node* Splay::splay(Node* x) {
      | ^~~~
cod.cpp: In member function ‘void Splay::insert(char*)’:
cod.cpp:123:5: error: ‘Node’ was not declared in this scope
  123 |     Node* newNode = new Node(value);
      |     ^~~~
cod.cpp:123:11: error: ‘newNode’ was not declared in this scope
  123 |     Node* newNode = new Node(value);
      |           ^~~~~~~
cod.cpp:123:25: error: expected type-specifier before ‘Node’
  123 |     Node* newNode = new Node(value);
      |                         ^~~~
cod.cpp:124:9: error: ‘root’ was not declared in this scope
  124 |     if (root == nullptr) {
      |         ^~~~
cod.cpp:127:9: error: ‘list’ was not declared in this scope
  127 |         list<Node*>* childList = root->getChildsList();
      |         ^~~~
cod.cpp:127:19: error: expected primary-expression before ‘>’ token
  127 |         list<Node*>* childList = root->getChildsList();
      |                   ^
cod.cpp:127:22: error: ‘childList’ was not declared in this scope
  127 |         list<Node*>* childList = root->getChildsList();
      |                      ^~~~~~~~~
cod.cpp:129:19: error: ‘leafNode’ was not declared in this scope
  129 |             Node* leafNode = new Node(value);
      |                   ^~~~~~~~
cod.cpp:129:34: error: expected type-specifier before ‘Node’
  129 |             Node* leafNode = new Node(value);
      |                                  ^~~~
cod.cpp:131:20: error: ‘splay’ was not declared in this scope; did you mean ‘Splay’?
  131 |             root = splay(leafNode);
      |                    ^~~~~
      |                    Splay
cod.cpp:134:20: error: ‘splay’ was not declared in this scope; did you mean ‘Splay’?
  134 |             root = splay(newNode);
      |                    ^~~~~
      |                    Splay
